--- a/virtualPhotobooth/src/App.css
+++ b/virtualPhotobooth/src/App.css
@@ -6,17 +6,38 @@
 }
 /* App.css or main CSS file */
 
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #e0f7fa, #b2ebf2);
+  background: linear-gradient(to bottom, #d8f3fa, #00a4cc);
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
 }
+/* Style for Webkit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 0px; /* Adjust the width of the scrollbar */
+}
+
+/* Style for the scrollbar track (background of the scrollbar) */
+::-webkit-scrollbar-track {
+  background-color: linear-gradient(to bottom, #d8f3fa, #00a4cc); /* Light gray background */
+}
+
+/* Style for the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Gray thumb */
+  border-radius: 4px; /* Rounded corners */
+}
+
+/* Hover effect on scrollbar thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker thumb on hover */
+}
+
 
 
 .logo {
